force-app/main/default/objects/Booking_Request__c/Booking_Request__c.object-meta.xml
<CustomObject>
    <label>Booking Request</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Booking Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>