force-app/main/default/objects/Booking_Request__c/fields/Blocked_Price__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Price__c</fullName>
    <label>Blocked Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>