force-app/main/default/objects/Booking_Request__c/fields/Is_Cost_Sheet_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Cost_Sheet_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cost Sheet Present</label>
    <type>Checkbox</type>
</CustomField>