force-app/main/default/objects/Booking_Request__c/fields/Is_PSA_Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_PSA_Booking_Request__c</fullName>
    <formula>Unit__r.Is_PSA_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PSA Booking Request</label>
    <type>Checkbox</type>
</CustomField>