force-app/main/default/objects/Booking_Request__c/fields/IsResponded__c.field-meta.xml
<CustomField>
    <fullName>IsResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResponded</label>
    <type>Checkbox</type>
</CustomField>