force-app/main/default/objects/Booking_Request__c/fields/Preferred_Unit__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Booking Requests (Preferred Unit)</relationshipLabel>
    <relationshipName>Booking_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>