force-app/main/default/objects/Booking_Request__c/fields/Request_Abandoned_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Abandoned_Date__c</fullName>
    <label>Request Abandoned Date</label>
    <type>DateTime</type>
</CustomField>