force-app/main/default/objects/Booking_Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Response</fullName>
                <default>true</default>
                <label>Waiting for Response</label>
            </value>
            <value>
                <fullName>Cost Sheet Preparation</fullName>
            </value>
            <value>
                <fullName>Request Abandoned</fullName>
            </value>
            <value>
                <fullName>Request Successfully Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>