force-app/main/default/objects/Booking_Request__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Booking Requests</relationshipLabel>
    <relationshipName>Booking_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>