force-app/main/default/objects/Booking_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Stage__c</columns>
    <columns>Email__c</columns>
    <columns>IsResponded__c</columns>
    <columns>Is_PSA_Booking_Request__c</columns>
    <columns>Preferred_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>